--- a/public/index.html
+++ b/public/index.html
@@ -11,12 +11,12 @@
 			crossorigin="anonymous"
 		/>
 		<link rel="stylesheet" href="css/style.css" />
-		<title>ChatCord App</title>
+		<title>erChat</title>
 	</head>
 	<body>
 		<div class="join-container">
 			<header class="join-header">
-				<h1><i class="fas fa-smile"></i> ChatCord</h1>
+				<h1><i class="fas fa-icons"></i> erChat</h1>
 			</header>
 			<main class="join-main">
 				<form action="chat.html">
@@ -33,12 +33,10 @@
 					<div class="form-control">
 						<label for="room">Room</label>
 						<select name="room" id="room">
-							<option value="JavaScript">JavaScript</option>
-							<option value="Python">Python</option>
-							<option value="PHP">PHP</option>
-							<option value="C#">C#</option>
-							<option value="Ruby">Ruby</option>
-							<option value="Java">Java</option>
+							<option value="General">General</option>
+							<option value="Room1">Room 1</option>
+							<option value="Room2">Room 2</option>
+							<option value="Room3">Room 3</option>
 						</select>
 					</div>
 					<button type="submit" class="btn">Join Chat</button>
